# LLM-Engineering

./: .gitignore  pyproject.toml
fundamentals/: openai-call.ipynb
hugging_face/: tokenizer.ipynb
llm_tools/: flight_booking_asssitant.ipynb
rag/: basic_rag_from_file.py  rag_fundamentals_using_langchain.ipynb  rag_with_chroma_vector.ipynb
rag/knowledge-base/employees/: Avery Lancasters.md
week1/: openai-call.ipynb  sales_brochure.ipynb  scrapper.py  week1_exercise.ipynb
week2/: chat.json  flight_booking_asssitant.ipynb  gradio.ipynb  prices.db  tools.ipynb  week2.ipynb
