[project]
name="llm-engineering"
version="0.1.0"
requires-python=">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "gradio>=6.1.0",
    "huggingface-hub>=0.36.0",
    "litellm>=1.80.10",
    "openai>=2.11.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tiktoken>=0.12.0",
    "transformers>=4.57.3",
]

[dependency-groups]
lint = [
    "ruff>=0.14.9",
]
