[project]
name="llm-engineering"
version="0.1.0"
requires-python=">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "gradio>=6.1.0",
    "huggingface-hub>=0.36.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.6",
    "litellm>=1.80.10",
    "nbformat>=5.10.4",
    "openai>=2.11.0",
    "plotly>=6.5.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
    "tiktoken>=0.12.0",
    "transformers>=4.57.3",
]

[dependency-groups]
lint = [
    "ruff>=0.14.9",
]
